--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="normalize.css">
   <!-- <link rel="shorcut icon" href="https://cdn4.iconfinder.com/data/icons/business-use/74/80-32.png"> -->
   <title>Coworking</title>
 </head>
@@ -17,27 +18,40 @@
   <div class="wrapper">
     <!-- HEADER -->
     <div class="header">
+
       <div class="header__top">
-        <div class="header__top-logo">
-          <img src="img/logo-fig.png" alt="логотип компании">
-        </div>
-        <div class="header__top-info">
-          <a href="#" class="number">8(800)00-392-10</a>
-          <a href="#" class="schedule_dropped">График работы</a>
+        <div class="contain clearfix">
+
+          <div class="header__top-item--left">
+            <img src="img/logo-fig.png" alt="логотип компании">
+          </div>
+
+          <div class="header__top-item--right">
+            <div class="contacts">
+              <a href="#" class="number">8(800)00-392-10</a>
+              <a href="#" class="schedule_dropped">График работы</a>
+            </div>
+          </div>
+
         </div>
       </div>
       <div class="header__main-pic">
-        <img src="img/banner.png" alt="главный баннер">
+        <div class="contain">
+          <img src="img/banner.png" alt="главный баннер">
+        </div>
       </div>
     </div>
-    <!-- CONTAINER -->
-    <div class="container">
-      <div class="container__menu">
+  </div>
+  <!-- CONTAINER -->
+  <div class="main__container clearfix">
+    <!-- ALL CONTENT HERE -->
+    <div class="contain">
+      <div class="container__menu clearfix">
         <!-- MENU HERE -->
         <ul class="container__menu-list">
           <li class="container__menu-item">
             <a href="index.html">
-              <img src="img/menu/main-icon.png" alt="главная лого"> главная
+              <img src="img/menu/main-icon.png" alt="главная  лого"> главная
             </a>
           </li>
           <li class="container__menu-item">
@@ -47,148 +61,152 @@
           </li>
           <li class="container__menu-item">
             <a href="#">
-              <img src="img/menu/wallet-icon.png" alt="тарифы лого"> тарифы
+              <img src="img/menu/wallet-icon.png" alt="тарифы   лого"> тарифы
             </a>
           </li>
         </ul>
       </div>
-
-      <div class="container__features">
-        <!-- FEATURES -->
-        <h1>Особенности</h1>
-        <ul class="features">
-          <li class="features__item">
+      <div class="container__allcontent clearfix">
+        <div class="container__features clearfix">
+          <!-- FEATURES -->
+          <h1>Особенности</h1>
+          <ul class="features">
+            <li class="features__item">
+              <!-- FIRST ITEM -->
+              <div class="features__pic">
+                <img src="img/features/flower.png" alt="цветок лого">
+              </div>
+              <div class="features__text">
+                <p class="features__text-topic">уникальность</p>
+                <ul class="features__text-list">
+                  Создан для вашего комфортного отдыха
+                  <li>Кофе/чай</li>
+                  <li>Шкаф (5кг)</li>
+                  <li>Рабочее место</li>
+                </ul>
+              </div>
+            </li>
+            <li class="features__item">
+              <!--  SECOND ITEM -->
+              <div class="features__pic">
+                <img src="img/features/mark-as-favorite-star.png" alt="звезда лого">
+              </div>
+              <div class="features__text">
+                <p class="features__text-topic">премиум-класс</p>
+                <ul class="features__text-list">
+                  Для любителей хорших впечатлений
+                  <li>Обед+кофе</li>
+                  <li>Шкаф(10кг)</li>
+                  <li>Детское кресло</li>
+                </ul>
+              </div>
+            </li>
+            <li class="features__item">
+              <!-- THIRD ITEM -->
+              <div class="features__pic">
+                <img src="img/features/painter-palette.png" alt="паллет лого">
+              </div>
+              <div class="features__text">
+                <p class="features__text-topic">лакшери-стулья</p>
+                <ul class="features__text-list">
+                  Всё самое лучшее и незабываемое
+                  <li>Джакузи</li>
+                  <li>Шкаф (15кг)</li>
+                  <li>Табуретка</li>
+                </ul>
+              </div>
+            </li>
+            <!-- NEWS BLOCK -->
+          </ul>
+        </div>
+        <div class="container__news">
+          <h1>Последние новости</h1>
+          <ul class="news__list">
             <!-- FIRST ITEM -->
-            <div class="features__pic">
-              <img src="img/features/flower.png" alt="цветок лого">
-            </div>
-            <div class="features__text">
-              <p class="features__text-topic">уникальность</p>
-              <ul class="features__text-list">
-                Создан для вашего комфортного отдыха
-                <li>Кофе/чай</li>
-                <li>Шкаф (5кг)</li>
-                <li>Рабочее место</li>
-              </ul>
-            </div>
-          </li>
-          <li class="features__item">
-            <!--  SECOND ITEM -->
-            <div class="features__pic">
-              <img src="img/features/mark-as-favorite-star.png" alt="звезда лого">
-            </div>
-            <div class="features__text">
-              <p class="features__text-topic">премиум-класс</p>
-              <ul class="features__text-list">
-                Для любителей хорших впечатлений
-                <li>Обед+кофе</li>
-                <li>Шкаф(10кг)</li>
-                <li>Детское кресло</li>
-              </ul>
-            </div>
-          </li>
-          <li class="features__item">
-            <!-- THIRD ITEM -->
-            <div class="features__pic">
-              <img src="img/features/painter-palette.png" alt="паллет лого">
-            </div>
-            <div class="features__text">
-              <p class="features__text-topic">лакшери-стулья</p>
-              <ul class="features__text-list">
-                Всё самое лучшее и незабываемое
-                <li>Джакузи</li>
-                <li>Шкаф (15кг)</li>
-                <li>Табуретка</li>
-              </ul>
-            </div>
-          </li>
-          <!-- NEWS BLOCK -->
-        </ul>
-      </div>
-      <div class="container__news">
-        <h1>Последние новости</h1>
-        <ul class="news__list">
-          <!-- FIRST ITEM -->
-          <li class="news__item">
-            <div class="news__img">
-              <img src="img/news_pic/layer-6.png" alt="черная дыра">
-            </div>
-            <div class="news__content">
-              <div>12.10.2016</div>
-              <span>Черная дыра скидок</span>
-              <p>Ключевым технологическим партнером GrowUp является дата-центр Миран, расположенный всего лишь в 500 метрах
-                от здания, а значит, скорость интернета будет стабильной в любое время суток. Коворкинг работает в формате
-                24/7. Используйте шкаф для хранения личных вещей. </p>
-            </div>
-          </li>
-          <li class="news__item">
-            <!-- SECOND ITEM -->
-            <div class="news__img">
-              <img src="img/news_pic/layer-7.png" alt="фаер">
-            </div>
-            <div class="news__content">
-              <div>01.02.2016</div>
-              <span>Заражай друзей, получай призы!</span>
-              <p>Быть частью сообщества сильных, грамотных и увлеченных своим делом профессионалов - вдохновляет выходить на
-                новые уровни развития. Регулярно в коворкинге проводятся лекции, мастер-классы, встречи с инвесторами или
-                менторами для резидентов. </p>
-            </div>
-          </li>
-          <li class="news__item">
-            <!-- THIRD ITEM -->
-            <div class="news__img">
-              <img src="img/news_pic/layer-9.png" alt="рабочее место">
-            </div>
-            <div class="news__content">
-              <div>22.12.2015</div>
-              <span>Новое рабочее место для бизнесменов.</span>
-              <p>Для резидентов коворкинга оборудована не только рабочая зона, но и зона отдыха. Она включает в себя: кухонную
-                зону и зону релакса.Каждый резидент может беспрепятственно пользоваться кухонным оборудованием: микроволновкой,
-                чайником, кофе машиной, посудой.</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class="container__pages">
-        <!--CHOOSE PAGES -->
-        <ul class="container__pages-list">
-          <li class="container__page">Страница 1 из 7</li>
-          <li class="container__page">
-            <a href="#">
-              <img src="img/left-arrow-light.png" alt="стрелка влево">
-            </a>
-          </li>
-          <li class="container__page-num">
-            <a href="#">1</a>
-          </li>
-          <li class="container__page-num">
-            <a href="#">2</a>
-          </li>
-          <li class="container__page-num">
-            <a href="#">3</a>
-          </li>
-          <li class="container__page-num">
-            <a href="#">4</a>
-          </li>
-          <li class="container__page-num">
-            <a href="#">5</a>
-          </li>
-          <li class="container__page-num">
-            <a href="#">6</a>
-          </li>
-          <li class="container__page-num">
-            <a href="#">7</a>
-          </li>
-          <li class="container__page">
-            <a href="">
-              <img src="img/right-arrow.png" alt="стрелка вправо">
-            </a>
-          </li>
-        </ul>
+            <li class="news__item">
+              <div class="news__img">
+                <img src="img/news_pic/layer-6.png" alt="черная дыра">
+              </div>
+              <div class="news__content">
+                <div>12.10.2016</div>
+                <span>Черная дыра скидок</span>
+                <p>Ключевым технологическим партнером GrowUp является дата-центр Миран, расположенный всего лишь в 500 метрах
+                  от здания, а значит, скорость интернета будет стабильной в любое время суток. Коворкинг работает в формате
+                  24/7. Используйте шкаф для хранения личных вещей. </p>
+              </div>
+            </li>
+            <li class="news__item">
+              <!-- SECOND ITEM -->
+              <div class="news__img">
+                <img src="img/news_pic/layer-7.png" alt="фаер">
+              </div>
+              <div class="news__content">
+                <div>01.02.2016</div>
+                <span>Заражай друзей, получай призы!</span>
+                <p>Быть частью сообщества сильных, грамотных и увлеченных своим делом профессионалов - вдохновляет выходить
+                  на новые уровни развития. Регулярно в коворкинге проводятся лекции, мастер-классы, встречи с инвесторами
+                  или менторами для резидентов. </p>
+              </div>
+            </li>
+            <li class="news__item">
+              <!-- THIRD ITEM -->
+              <div class="news__img">
+                <img src="img/news_pic/layer-9.png" alt="рабочее место">
+              </div>
+              <div class="news__content">
+                <div>22.12.2015</div>
+                <span>Новое рабочее место для бизнесменов.</span>
+                <p>Для резидентов коворкинга оборудована не только рабочая зона, но и зона отдыха. Она включает в себя: кухонную
+                  зону и зону релакса.Каждый резидент может беспрепятственно пользоваться кухонным оборудованием: микроволновкой,
+                  чайником, кофе машиной, посудой.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="container__pages">
+          <!--CHOOSE PAGES -->
+          <ul class="container__pages-list">
+            <li class="container__page">Страница 1 из 7</li>
+            <li class="container__page">
+              <a href="#">
+                <img src="img/left-arrow-light.png" alt="стрелка влево">
+              </a>
+            </li>
+            <li class="container__page-num">
+              <a href="#">1</a>
+            </li>
+            <li class="container__page-num">
+              <a href="#">2</a>
+            </li>
+            <li class="container__page-num">
+              <a href="#">3</a>
+            </li>
+            <li class="container__page-num">
+              <a href="#">4</a>
+            </li>
+            <li class="container__page-num">
+              <a href="#">5</a>
+            </li>
+            <li class="container__page-num">
+              <a href="#">6</a>
+            </li>
+            <li class="container__page-num">
+              <a href="#">7</a>
+            </li>
+            <li class="container__page">
+              <a href="">
+                <img src="img/right-arrow.png" alt="стрелка вправо">
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-    <!-- FOOTER -->
-    <div class="footer">
+  </div>
+  <!-- MAIN CONTAINER END -->
+  <!-- FOOTER -->
+  <div class="footer clearfix">
+    <div class="contain">
       <div class="footer__text">
         <p>Сделано с любовью и старанием на курсе «HTML + CSS» в
           <b>LoftSchool.</b> Автор работы:
@@ -229,6 +247,7 @@
         </ul>
       </div>
     </div>
+  </div>
 
   </div>
 </body>
